--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -9,3 +9,12 @@ header h1 {
     text-align: center;
 }
 
+button {
+    border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -khtml-border-radius: 5px;
+    padding: 10px;
+    background-color: #55869B;
+}
+
+button.darktheme {
+    background-color: #6F6A87;
+}
