--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -9,12 +9,20 @@ header h1 {
     text-align: center;
 }
 
+div.firstbuttons {
+    display: flex;
+    justify-content: space-between;
+}
+
 button {
     border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -khtml-border-radius: 5px;
     padding: 10px;
     background-color: #55869B;
+    border-style: solid;
+    border-color: transparent;
 }
 
 button.darktheme {
     background-color: #6F6A87;
 }
+
