--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #F9F3EC;
+    background-color: #D9827C;
     display: grid;
     grid-column: 1fr 4fr;
     grid-template-rows: 1fr;
@@ -25,8 +25,15 @@ button {
 button.darktheme {
     background-color: #6F6A87;
 }
-textarea {
-    border-style:solid;
-    border-width: 2px;
+
+div.textarea {
+    background-color: #F9F3EC;
+    padding-top: 1%;
+    border: solid 2px;
+    padding-bottom: 15%;
+    padding-left: 1%;
+    margin-top: 5px;
 }
+
+
 
