--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -7,6 +7,7 @@ body {
 
 header h1 {
     text-align: center;
+    font-family: 'Xanh Mono', monospace;
 }
 
 div.firstbuttons {
@@ -19,7 +20,6 @@ button {
     padding: 10px;
     background-color: #55869B;
     border-style: solid;
-    border-color: transparent;
 }
 
 button.darktheme {
