--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -46,5 +46,13 @@ button.cancel {
     background-color: #A267DA;
 }
 
+div.info {
+    display: flex;
+    flex-direction: row; 
+    justify-content: right;
+}
 
-
+div.info button {
+    background-color: #D9827C;
+    border-color: transparent; 
+}
