centered, resized and added clickable links to each image

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -58,3 +58,11 @@ div.info button {
     border-color: transparent; 
     color: black;
 }
+
+footer {
+    text-align: center;
+}
+
+footer p {
+    font-family: 'Xanh Mono', monospace;
+}
