--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -5,6 +5,10 @@ body {
     grid-template-rows: 1fr;
 }
 
+main {
+    grid-column: 2/2;
+}
+
 header h1 {
     text-align: center;
     font-family: 'Xanh Mono', monospace;
@@ -65,4 +69,9 @@ footer {
 
 footer p {
     font-family: 'Xanh Mono', monospace;
+}
+
+aside h2 {
+    grid-column: 1/1;
+    font-family: 'Poor Story', cursive;
 }
