--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,14 +1,15 @@
 body {
     background-color: #D9827C;
     display: grid;
-    grid-template-columns:1fr 4fr;
-    grid-template-rows: 1fr;
+    grid-template-columns:1fr;
+    grid-template-rows:1fr 0.2fr;
     margin:0px
 }
 
 main {
-    grid-column: 2/2;
+    grid-column: 1/1;
     padding-right: 10px;
+    padding-left: 10px;
 }
 
 header h1 {
@@ -66,7 +67,7 @@ div.info button {
 }
 
 footer {
-    grid-column: 2/2;
+    grid-row: 3/3;
     text-align: center;
     padding-bottom: 5px;
 }
@@ -76,16 +77,16 @@ footer p {
 }
 
 aside {
-    grid-column: 1/1;
+    grid-row: 2/2;
     font-family: 'Poor Story', cursive;
     background-color: lightpink;
-    height:100vh;
-    grid-row: 1/12;
-    margin-right: 10px;
+    margin: 10px;
     text-align: center;
+    margin-top: 10px;
+    border: 2px solid black;
 }
 
 aside ul {
-    text-align: left;
     list-style-type: square;
+    text-align: left;
 }
