--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -94,12 +94,13 @@ aside ul {
 @media screen and (min-width: 600px) {
     body {
         grid-template-columns: 1fr 4fr;
-        grid-template-rows: 1fr;
     }
     aside {
         grid-column: 1/1;
-        grid-row: 1/2;
+        grid-row: 1/4;
         border: 0px;
+        margin: 0px;
+        border-right: 2px solid;
     }
     main {
         grid-column: 2/2;
