--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -102,7 +102,7 @@ aside ul {
         border: 0px;
         margin: 0px;
         border-right: 2px solid;
-        height: 150%;
+        height: 100vh;
     }
     main {
         grid-column: 2/2;
