--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -34,13 +34,12 @@ button.darktheme {
     background-color: #6F6A87;
 }
 
-div.textarea {
-    background-color: #F9F3EC;
-    padding-top: 1%;
-    border: solid 2px;
-    padding-bottom: 15%;
-    padding-left: 1%;
-    margin-top: 5px;
+textarea{
+    resize: none;
+    width: 100%;
+    height: 100px;
+    border: 2px;
+    padding-top: 5px;
 }
 
 div.secondbuttons {
@@ -113,3 +112,24 @@ aside ul {
         grid-row: 4/4;
     }
 }
+
+.darkthemebody {
+    background-color: #222222;
+    color: white;
+}
+
+.darkthemeaside {
+    background-color: #444444;
+    color: white;
+}
+
+.darkthemecancel {
+    background-color: darkblue;
+    color: white;
+}
+
+.darkthemebutton {
+    background-color: grey;
+    color: white;
+}
+
