--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -30,9 +30,6 @@ button {
     color:white
 }
 
-.darktheme {
-    background-color: #6F6A87;
-}
 
 textarea{
     resize: none;
@@ -134,4 +131,6 @@ aside ul {
     color: white;
 }
 
-
+.hidden {
+    display: none;
+}
